# ITMO_ICT_WebDevelopment_tools_2023-2024

./: 404.html  index.html  mkdocs.yml
docs/: index.md  index2.md
docs/lw1/: index.md
docs/lw2/: index.md
docs2/: index.md
index2/: index.html
lw1/: index.html
lw2/: index.html
search/: search_index.json
students/K33422/Antonova_Maria/: main.py
students/K33422/Antonova_Maria/LR1/: models.py
students/K33422/Antonova_Maria/LR1/routes/: team.py
students/K33422/Antonova_Maria/LR1/schemas/: team.py
students/K33422/Antonova_Maria/LR1/settings/: config.py
students/K33422/Antonova_Maria/LR_1/: dependencies.py
students/K33422/Antonova_Maria/LR_3/: Dockerfile  alembic.ini  docker-compose.yaml  pyproject.toml
students/K33422/Antonova_Maria/LR_3/src/: celery.py  main.py  main2.py  models.py
students/K33422/Antonova_Maria/LR_3/src/adapters/: auth.py
students/K33422/Antonova_Maria/LR_3/src/repos/: parser.py
students/K33422/Antonova_Maria/LR_3/src/routes/: auth.py  parse.py  parse2.py  profile.py  project.py
students/K33422/Antonova_Maria/LR_3/src/settings/: config.py  connection.py
students/K33422/Antonova_Maria/migrations/: env.py
students/K33422/Antonova_Maria/routes/: profile.py
students/K33422/Antonova_Maria/schemas/: auth.py
students/K33422/Antonova_Maria/settings/: config.py  connection.py
students/K33422/docs/: index.md
students/K33422/practical_works/pr 1.1/: endpoints.py  main.py  models.py
students/K33422/practical_works/pr 1.2/: main.py  models.py
students/K33422/practical_works/pr 1.3/: alembic.ini
(+19 files in other folders)
