[tool.poetry]
name = "lab"
version = "0.1.0"
description = ""
authors = ["Maria Antonova <mariaantonova261@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
sqlmodel = "^0.0.18"
SQLAlchemy = "^2.0.30"
pydantic = "^2.7.1"
fastapi = "^0.111.0"
uvicorn = "^0.29.0"
aiohttp = "^3.9.5"
alembic = "^1.13.1"
celery = "^5.4.0"
redis = "^5.0.4"
psycopg2-binary = "^2.9.9"
passlib = "^1.7.4"
PyJWT = "^2.8.0"
bs4 = "^0.0.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
